fix some layout issues

--- a/platform/grails-app/assets/stylesheets/application.less
+++ b/platform/grails-app/assets/stylesheets/application.less
@@ -30,21 +30,24 @@ h2 { font-size:20px; }
 .padding-left { padding-left:10px }
 .full-width { width:100% }
 .block-center { display:block; margin-left:auto; margin-right:auto }
-#site-header { height:44px; line-height:44px; vertical-align:middle; background-color:#f8f8f8; position:relative }
-#site-header .site-header-brand { color:#a11d21; font-size:28px }
+#site-header { display:flex; height:44px; line-height:44px; vertical-align:middle; background-color:#f8f8f8; position:relative; border-bottom:1px solid #e7e7e7 }
+#site-header a { text-decoration:none; }
+#site-header .site-header-brand { color:#a11d21; font-size:28px; flex-grow:1 }
 #site-header .site-header-brand .logo { width:32px; margin-top:-6px; }
-#site-header .site-header-link { text-decoration:none; color:#9d9d9d; }
+#site-header .site-header-link { color:#9d9d9d; }
 #site-header .site-header-link:hover { color:#333; }
-#site-header .dropdown { margin-right:-15px }
-#site-header .dropdown .dropdown-toggle { display:inline-block; height:100%; padding-left:10px; padding-right: 10px; }
+#site-header .site-header-control { display:inline-block; padding-left:10px; padding-right: 10px; }
+#site-header .site-header-right { align-self:flex-end }
+#site-header .dropdown { margin-right:-15px; }
 #site-header .dropdown.open .dropdown-toggle { color:#333 }
 #site-header .dropdown.open .dropdown-toggle { background-color:#e7e7e7 }
-#site-header .external-toggle-sidemenu { display:none; margin-right:10px; margin-top:-10px }
+#site-header .external-toggle-sidemenu { display:none; margin-left:-15px; padding-left:15px; padding-right:15px }
+#site-header .external-toggle-sidemenu:hover { background-color:#e7e7e7 }
 @media screen and (max-width: 480px) {
 	#site-header .external-toggle-sidemenu { display:inline-block }
 }
 footer.footer { position:absolute; bottom:0; width:100%; height:52px;}
-footer.footer .navbar { margin-bottom:0 }
+footer.footer .navbar { margin-bottom:0; border-radius:0 }
 footer.footer .navbar-toggle { padding:5px 9px }
 footer.footer .navbar-toggle .toggle-icon:before { content:"\f077";}
 footer.footer .navbar-toggle.collapsed .toggle-icon:before { content:"\f078";}
